# twitter_monitor

./: .gitignore  Dockerfile  pyproject.toml
src/: bot_discord.py  bot_twitter.py  config.py  env_template  logger.py  main.py
